syntax = "proto2";

import "google/protobuf/descriptor.proto";
import "ui_core.proto";

//Notes:
// Comments:
// 1. Leading comment are accessible via plugin and can be used for code generation
// 2. Trailing comments private to model files and not accessible in plugin


message ForeignKeyOption
{
  required string JoiningTableName = 1;
  required string TableFieldName = 2;
  required string FieldType = 3;
  required bool IsPrimaryKey = 4;
  required bool IsRequired = 5;
}

message DBOnlyFieldOption{
  required string FieldName = 1;
  required string DbDataType = 2;
  required int32 FieldSequenceNumber = 3;
  required bool IsPrimaryKey = 4;
  required bool IsRequired = 5;
}

message UsageParamNameOption{
  required string UsageParamName = 1;
  required string UsageParamDataType = 2;
}

message MessageJsonRoot{
  optional string CreateDesc = 1;
  optional string ReadDesc = 2;
  optional string UpdateDesc = 3;
  optional string PatchDesc = 4;
  optional string DeleteDesc = 5;
  optional string ReadWebSocketDesc = 6;
  optional string UpdateWebSocketDesc = 7;
}

extend google.protobuf.FileOptions 
{
  //General Options - 51
  optional string FluxFileCmnt = 51151;
  optional string FluxFileModelType = 51152;//Possible values: SERVICE
}

extend google.protobuf.MessageOptions
{
  //General Options - 51
  optional string FluxMsgCmnt = 51151;
  optional string FluxMsgRootId = 51152;
  optional string FluxMsgPrefixPrepend = 51153;//Inline expansion will cause prefix prepend(tion)

  //DB Options - 52
  optional string FluxMsgTbl = 52151;
  optional string FluxMsgTblShared = 52152;
  //Below 2 options are also available at field level, setting at msg level implies: generate DB only synthesized field
  // & map same to field named (value of): FluxFldFkCol found in table named (value of): FluxFldFkTbl; synthesized
  // field name shall be: snake_case (value of): FluxFldFkTbl concatenated with snake_case (value of): FluxFldFkCol
  optional string FluxMsgFkTbl = 52153;
  optional string FluxMsgFkCol = 52154;
  repeated ForeignKeyOption FluxMsgFk = 52155;
  repeated DBOnlyFieldOption FluxDbOnlyField = 52156;
  repeated UsageParamNameOption FluxMsgOrmUsageParam = 52157;


  //Service Options - 53
  optional string FluxMsgOpName = 53151;
  optional string FluxMsgRsp = 53152;
  optional string FluxMsgNotify = 53153;

  //DAO Options - 54
  optional string FluxMsgDaoAccessType = 54151;
  optional string FluxMsgNoExpand = 54152;

  //ORM options - 551
  optional string FluxMsgOrmRoot = 55151;//The root message that gets persisted to ORM has this option set
  //FluxMsgOrmCreateUpdateOrDelete option is expected to hold Orm Persistent class and variable name.
  //To simplify configuration and reduce redundancy, following variations are possible:
  //Case -0: If Variable name and Class name have only camel case difference:- value = "PersistenceClassType"
  //Case -1: If Variable name and class name have more then only camel case difference:- value = "PersistenceClassType,PersistenceClassVar"
  //Case -2: If Multiple classes are to be persisted and Variable name and Class name have only camel case difference:- value = "PersistenceClassType1:PersistenceClassType2"
  //Case -3: If Multiple classes are to be persisted and Variable name and class name have more then only camel case difference:- value = "PersistenceClassType1,PersistenceClassVar1:PersistenceClassType2,PersistenceClassVar2"
  optional string FluxMsgOrmCreateUpdateOrDeleteClasses = 55152;

  // Code does not use QueryRootType and QueryRootVar ATM
  //Seems QueryRootType and QueryRootVar are not required, likely because the mapping can be multi-level and cross-level not 1-1.
  //Old Thought & Not Supported now (leaving here in case analysis was wrong):
  //FluxMsgOrmReadRespClasses option is expected to hold Orm Response vs Orm Query mapping.
  //This can make the configuration look messy and redundant, hence following variations are sufficient and possible
  //Case - 0: full blown approach:- value = "RespType1,RespVar1;QueryRootType1,QueryRootVar1:RespType2,RespVar2;QueryRootType2,QueryRootVar2"
  //Case -1: If Resp Type and Query Root are same but Variable name different (ignoring only camel case difference):- value = "RespType,RespVar"
  //Case -2: If both type are not same but variable name have only camel case difference:- value = "RespType:QueryRootType"
  //Case -3: If both type are same and both type and variable name have only camel case difference:- value = "RespType"

  //New and Supported:
  //FluxMsgOrmReadRespClasses option is expected to hold Orm Response class and variable name.
  //To simplify configuration and reduce redundancy, following variations are possible:
  //Case -0: If Variable name and Class name have only camel case difference:- value = "RespClassType"
  //Case -1: If Variable name and class name have more then only camel case difference:- value = "RespClassType,RespClassVar"
  //Case -2: If Multiple classes are to be persisted and Variable name and Class name have only camel case difference:- value = "RespClassType1:RespClassType2"
  //Case -3: If Multiple classes are to be persisted and Variable name and class name have more then only camel case difference:- value = "RespClassType1,RespClassVar1:RespClassType2,RespClassVar2"
  optional string FluxMsgOrmReadRespClasses = 55153;

  //UI option 552
  optional MessageJsonRoot FluxMsgJsonRoot = 55251;
  // UI may use Abbreviated representation of msg to show msg as single value
  optional string FluxMsgAbbreviated = 55252;
  optional string FluxMsgLayout = 55253;  // Supported values : "Table", "Tree" and "Manual"
  optional bool FluxMsgServerPopulate = 55254; // Use this to signal msg not to populate from UI, populate from server
  optional WidgetUIData FluxMsgWidgetUIData = 55255; // Use this to populate ui widget data for layout messages

  //Complexity Option - 56
  optional string FluxMsgCmplxHigh = 56151;
  optional string FluxMsgCmplxMed = 56152;
  optional string FluxMsgCmplxLow = 56153;

}

extend google.protobuf.FieldOptions
{
  //General Options - 51
  optional string FluxFldCmnt = 51151;
  optional string FluxFldHide = 51152;  // Only "True" and "False" Values supported
  optional string FluxFldHelp = 51153;
  // Below option is used where we have mismatch in field's proto
  // datatype and placeholder that we want in output
  optional string FluxFldDefaultValuePlaceholderString = 51154;
  optional bool FluxFldIsRequired = 51155;
  optional string FluxFldAlias = 51156;  // the value set on this attribute is used as replacement field name by plugin

  //DB Options - 52
  optional string FluxFldTbl = 52151;
  optional string FluxFldCol = 52152;
  optional string FluxFldPk = 52153;
  // left for backward compatibility
  optional string FluxFldFkTbl = 52154 [deprecated=true];
  optional string FluxFldFkCol = 52155 [deprecated=true];
  // new complex type for foreign key support - use this instead
  optional ForeignKeyOption FluxFldFk = 52156;
  optional bool FluxFldIndex = 52157;
  optional bool FluxFldWebSocket = 52158;

  //ORM options - 551
  optional bool FluxFldOrmNoUpdate = 55151;  //The field that gets persisted in create to ORM and subsequently can't be updated has this option set

  //UI option 552
  optional string FluxFldAbbreviated = 55251; // Use this to "Abbreviate" msg and show compressed single val
  optional bool FluxFldSticky = 55252; // Use this to show messages with "same this field value" together
  optional bool FluxFldSwitch = 55253; // Use this to generate toggle button on UI
  optional string FluxFldAutoComplete = 55254; // Value should be name of auto complete list
  optional bool FluxFldServerPopulate = 55255; // Use this to signal field not to populate from UI, populate from server
  optional string FluxFldColor = 55256;
  optional int32 FluxFldSequenceNumber = 55257;
  optional string FluxFldAlertBubbleSource = 55258; //x-path to any repeated field: bubble shows if repeat field is non 0
  optional string FluxFldAlertBubbleColor = 55259; //x-path to any field with values bound to either of [CRITICAL, ERROR, WARNING, INFO, DEBUG, UNSPECIFIED]. If this field is in a repeat group, the highest severity in order as defined in this comment of all in collection applies
  optional string FluxFldUIPlaceholder = 55260; //placeholder for UI to display in grayed out font as user action hint

  //Complexity Option - 56
  optional string FluxFldCmplxHigh = 56151;
  optional string FluxFldCmplxMed = 56152; 
  optional string FluxFldCmplxLow = 56153;

  //Value Options - 59
  optional string FluxFldValMin = 59151;
  optional string FluxFldValMax = 59152;
  optional string FluxFldValList = 59153;
  optional string FluxFldTestVal = 59154;
  optional string FluxFldValDateTime = 59155 [deprecated=true];  // Use bool FluxFldValIsDateTime instead
  optional int32 FluxFldValSortWeight = 59156;
  optional int32 FluxFldSizeMax = 59157; // for str fields: use in DBs/other generators where max length cap is required
  optional bool FluxFldValIsDateTime = 59158;

  //Mapping Options - 60
  optional string FluxFldMappingSrcType = 60151;
}

